--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dashfuentes/API-NASA#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.19.0",
     "canvas": "^2.7.0",
     "express": "^4.17.1",
@@ -25,6 +26,7 @@
     "express-session": "^1.17.1",
     "image-to-slices": "^0.1.3",
     "node-fetch": "^2.6.1",
+    "request": "^2.88.2",
     "split-images": "^1.0.4"
   },
   "devDependencies": {
